# discord-webhook-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: author.rs  discord.rs  embed.rs  field.rs  footer.rs  lib.rs  webhook.rs
tests/: full_webhook.rs
