[package]
name = "discord-webhook-rs"
version = "1.0.5"
edition = "2024"
description = "Rust library to send Discord webhooks."
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "blocking"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }